# FM-synthesis-drum-machine

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  a.out  audiothread.cpp  audiothread.h  clickdetector.cpp  clickdetector.h  constants.h  eightVoices.cpp  eightVoices.h  fmosc.cpp  fmosc.h  main.cpp  mainwindow.cpp  mainwindow.h  mega_fm.ui  mega_fm_8step.ui  pattern.cpp  pattern.h  sequencer.cpp  sequencer.h  sequencerStep.cpp  sequencerStep.h  ui_mainwindow.h
src/stk/: config.status  configure
src/stk/autom4te.cache/: output.0  requests  traces.0
src/stk/projects/demo/: stk-demo
src/stk/projects/effects/: effects
src/stk/projects/eguitar/: eguitar
src/stk/projects/examples/: audioprobe  bethree  controlbee  crtsine  duplex  foursine  grains  inetIn  inetOut  midiprobe  play  playsmf  record  rtsine  sine  sineosc  threebees
src/stk/projects/ragamatic/: ragamat
src/stk/src/: Makefile
